--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title></title>
 </head>
 <body>
+<h1>Header 1</h1>
 <a href="">Item1</a><a href="">Item2</a><a href="">Item3</a>
 <script src="js/index.js"></script>
 </body>
