--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1>Heading 1</h1>
+<h1>Heading 2</h1>
 <a href="">Item1</a><a href="">Item2</a><a href="">Item3</a>
 <script src="js/index.js"></script>
 </body>
